2007-08-31  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (INCLUDES): Remove -D_GNU_SOURCE.
	* Makefile.in: Regenerated.

	* sysdep.h: Include "config.h" first.

2007-08-31  Nick Clifton  <nickc@redhat.com>

	* po/sk.po: New Slovakian translation.
	* configure.in (LINGUAS): Add sk.
	* configure: Regenerate.

2007-08-30  Nick Clifton  <nickc@redhat.com>

	* readelf.c (dump_type): New type used to classify the kinds of
	dump requested by the user.
	(dump_sects, cmdline_dump_sects): Use the new type.
	(options): Add --string-dump option.
	(request_dump): Rename to request_dump_bynumber.  Use dump_type.
	(request_dump_byname): Use dump_type.
	(parse_args): Parse --string-dump option.
	(process_section_headers): Fix calls to request_dump.
	(initialise_dumps_byname): Likewise.
	(dump_section): Rename to dump_section_as_bytes.
	(dump_section_as_strings): New function.  Display the contents of
	a section as printable strings.
	(process_section_contents): String dump the section if requested.
	(process_object): Use dump_type.
	(main): Likewise.
	* Makefile.am: Add dependency for readelf.c on safe-ctype.h.
	* Makefile.in: Regenerate.
	* NEWS: Mention the new feature.
	* doc/binutils.texi: Document the new feature.

2007-08-30  Nathan Sidwell  <nathan@codesourcery.com>

	* bucomm.c (bfd_nonfatal_message): New.
	* bucomm.h (bfd_nonfatal_message): Declare.
	* objcopy.c (RETURN_NONFATAL): Take BFD not NAME, use
	bfd_nonfatal_message.
	(copy_unknown_object): Adjust bfd_nonfatal and RETURN_NONFATAL
	calls, or replace with bfd_nonfatal_message calls as appropriate.
	(copy_object, copy_archive, copy_file, setup_section,
	copy_section, write_debugging_info): Likewise.

2007-08-28  Nick Clifton  <nickc@redhat.com>

	* NEWS: Mention Coverity's contribution.

2007-08-25  Ulrich Weigand  <uweigand@de.ibm.com>

	* readelf.c (process_note): Recognize SPU core file notes.

2007-08-24  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.in: Install embedspu on powerpc*-*-eabi* also.